--- a/src/app/rooms/rooms.html
+++ b/src/app/rooms/rooms.html
@@ -1,11 +1,3 @@
 <div class="container-grey">
-    <div class="room-container">
-        Donkey Kong
-    </div>
-    <div class="room-container">
-        Zelda
-    </div>
-    <div class="room-container">
-        Link
-    </div>
+    <gw-rooms-form></gw-rooms-form>
 </div>
