--- a/src/app/landing/landing.html
+++ b/src/app/landing/landing.html
@@ -1,9 +1,9 @@
 <div class="landing">
     <div class="landing-login-container">
         <h1 *ngIf='!username'>Welcome to Room Reserve</h1>
+        <img *ngIf='username' src="../assets/larry.jpg" alt="" class="landing-profile-img">
         <h1 *ngIf='username'>Welcome Back, {{username.name}}</h1>
-        <button type="button" name="button-login" [hidden]='username' [disabled]='username' (click)='login()' class="landing-button">Login with Github</button>
-        <button type="button" name="button-login" [hidden]='username' [disabled]='username' (click)='login()' class="landing-button">Login with Google</button>
-        <button type="button" name="button-logout" [hidden]='!username' [disabled]='!username' (click)='logout()' class="landing-button">Logout</button>
+        <span *ngIf='showWarning' (click)='closeWarning()' class="warning-landing">Please Login to view rooms X</span>
+        <gw-login></gw-login>
     </div>
 </div>
