--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -1,13 +1,16 @@
-.image-holder {
-    background:red;
-    width:20px;
-    height:20px;
-    border-radius: 50%;
-    display: inline-block;
-}
-
+/*
 .login-container {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.profile-img {
+    width:50px;
+    border-radius: 50%;
+}
+*/
+
+.button-login {
+    width: 100%;
 }
