--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -1,37 +1,40 @@
 <div class="main-container">
     <div class="about-room-container">
         <div class="about-room-image about-donkey-kong">
+            <img src="../../assets/donkey-kong.png" alt="" class="img-responsive">
         </div>
         <div class="about-room-text">
             <h2>Donkey Kong</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <button>Book Now</button>
+            <button class="inversed">Book Now</button>
         </div>
     </div>
 
     <div class="about-room-container">
         <div class="about-room-image about-zelda">
+            <img src="../../assets/zelda.png" alt="" class="img-responsive">
         </div>
         <div class="about-room-text">
             <h2>Zelda</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <button>Book Now</button>
+            <button class="inversed">Book Now</button>
         </div>
     </div>
 
     <div class="about-room-container">
         <div class="about-room-image about-halo">
+            <img src="../../assets/master-chief.png" alt="" class="img-responsive">
         </div>
         <div class="about-room-text">
             <h2>Halo</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <button>Book Now</button>
+            <button class="inversed">Book Now</button>
         </div>
     </div>
 
