--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,3 +1,11 @@
-<div>
-    Dashboard hello!
+<div class="dashboard">
+    <div class="dashboard-title">
+        <h2>Dashboard</h2>
+    </div>
+    <div class="dashboard-left">
+        <h3>Name Here</h3>
+    </div>
+    <div class="dashboard-right">
+        <h3>Upcoming Reservations</h3>
+    </div>
 </div>
